--- a/PEyLW/Trabajo Final/assets/sections.html
+++ b/PEyLW/Trabajo Final/assets/sections.html
@@ -21,11 +21,11 @@
                 <li><a href="#destacado">DESTACADO</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
                 <li class="submenu">
-                    <div class="four columns">
+                    <div class="cuatro-columnas">
                         <i class="bx bx-shopping-bag" id="carrito-logo"></i>
                     </div>
-                    <div class="two columns u-pull-right" id="carrito">
-                        <table id="lista-carrito" class="u-full-width">
+                    <div class="dos-columnas float-derecha" id="carrito">
+                        <table id="lista-carrito" class="full-width">
                             <thead>
                                 <tr>
                                     <th>Imagen</th>
@@ -37,7 +37,7 @@
                             <tbody></tbody>
                         </table>
 
-                        <a href="#" id="vaciar-carrito" class="u-full-width vaciar__carrito">VACIAR CARRITO</a>
+                        <a href="#" id="vaciar-carrito" class="full-width vaciar__carrito">VACIAR CARRITO</a>
                     </div>
                 </li>
                 <li><button class="switch" id="switch">
@@ -63,7 +63,7 @@
                     <img src="../assets/media/yeat3.png" alt="" class="tracks__img">
 
                     <div class="tracks__data">
-                        <h3 class="tracks__title">Yeat Type Beat - Rackz</h3>
+                        <h3 class="tracks__title">Yeat Type Beat - Truth</h3>
                         <span class="tracks__price">$30 | Exclusive License</span>
                     </div>
                     
@@ -135,7 +135,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="5">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -148,7 +148,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="6">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -161,7 +161,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="7">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -174,7 +174,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="8">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -187,7 +187,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="9">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -200,7 +200,7 @@
                         <span class="tracks__price">$20 | Lease</span>
                     </div>
 
-                    <button class="button tracks__button">
+                    <button class="button tracks__button" data-id="10">
                         <i class='bx bxs-shopping-bag' ></i>
                     </button>
                 </article>
@@ -278,7 +278,7 @@
         </div>
 
         <div class="copyright">
-            <span>© 2022 BeatStore, Inc. Argentina</span>
+            <span>© 2022 BeatStore, Inc. Gonzalo Parra</span>
         </div>
 
     </footer>
