--- a/PEyLW/Trabajo Final/index.html
+++ b/PEyLW/Trabajo Final/index.html
@@ -18,7 +18,7 @@
 
 <body>
     
-    <div class="hero">
+    <div class="main">
 
         <video autoplay loop muted plays-inline class="background-video">
             <source src="assets/media/video.mp4" type="video/mp4">
@@ -30,7 +30,6 @@
             </a>
             <ul class="nav_links">
                 <li><a href="#">HOME</a></li>
-                <!-- <li><a href="assets/sections.html">TRACKS</a></li> -->
                 <li><a href="assets/sections.html#destacado">DESTACADO</a></li>
                 <li><a href="assets/nosotros.html" target="_blank">NOSOTROS</a></li>
             </ul>
